Add detailed overview and full report sections to Cacuriá project, enhancing clarity on project background and outcomes

--- a/projects/cacuria.html
+++ b/projects/cacuria.html
@@ -28,8 +28,30 @@
                 <h2 class="section-heading text-uppercase">Cacuriá</h2>
                 <h3 class="section-subheading text-muted">An authoring tool to create educational content</h3>
             </div>
+            <div class="text-left">
+                <h4 class="section-heading text-capitalize">Overview</h4>
+            </div>
             <div class="row justify-content-center">
-                <div class="col-md-12">
+                <div class="col-md-11">
+                    <p class="text-muted-justified">
+                        <b>(S)ituation:</b> As an M.Sc. candidate at the LAWS Lab - UFMA (2013–2015), I identified a critical challenge in the development of educational interactive videos, which typically requires a multidisciplinary team and extensive resources.
+                    </p>
+                    <p class="text-muted-justified">
+                        <b>(T)ask:</b> My goal was to streamline this process by enabling educators—without technical expertise—to independently create enriched multimedia educational content.
+                    </p>
+                    <p class="text-muted-justified">
+                        <b>(A)ction:</b> I led the development of Cacuriá, an intuitive authoring tool for educational videos that allows teachers to incorporate images, audio, and text without programming. I built the system using C++ and the Qt framework, ensuring cross-platform compatibility. The tool was designed with educators through a participatory process and integrated with Brazil’s national iVoD platform (RNP).
+                    </p>
+                    <p class="text-muted-justified">
+                        <b>(R)esult:</b> Cacuriá empowered teachers to create content more independently and efficiently. The project became the foundation of my co-founded startup, Mediabox Technologies, which supported Cacuriá’s deployment and launched Mestrar, a complementary learning object delivery platform. This venture marked my transition into a leadership role, as I managed a growing team of 7+ members and helped scale our educational tech solutions across Brazil.
+                    </p>
+                </div>
+            </div>
+            <div class="text-left">
+                <h4 class="section-heading text-capitalize">Full Report</h4>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-11">
                     <p class="text-muted-justified">
                         During my time as an M.Sc. candidate at LAWS lab. - <a class="link" target="_blank"
                         href="https://portalpadrao.ufma.br/site">UFMA</a> between 2013 and 2015,
@@ -73,8 +95,10 @@
                         from popular applications used by teachers, such as Microsoft PowerPoint, making it
                         particularly accessible to end users without specific programming knowledge.
                     </p>
-                    <img class="img-fluid d-block mx-auto" src="../assets/img/projects/cacuria/interface.png"
-                        alt="" />
+                    <p class="text-muted-centered">
+                        <img class="img-fluid d-block mx-auto" src="../assets/img/projects/cacuria/interface.png" alt="" />
+                        <b>Figure 1:</b> Screenshot of the Cacuria interface, showcasing its intuitive layout.
+                    </p>
                     <p class="text-muted-justified">
                         One of Cacuriá's most exciting features is its integration with the iVoD service from
                         <a class="link" target="_blank" href="https://www.rnp.br/">RNP</a>, the National Research
@@ -93,8 +117,10 @@
                         colleagues. Notably, this venture marked my first experience as a manager. This experience
                         proved to be a significant challenge and served as my first foray into a leadership role.
                     </p>
-                    <img class="img-fluid d-block mx-auto" src="../assets/img/projects/cacuria/architecture.jpg"
-                        alt="" />
+                    <p class="text-muted-centered">
+                        <img class="img-fluid d-block mx-auto" src="../assets/img/projects/cacuria/architecture.jpg" alt="" />
+                        <b>Figure 2:</b> System architecture of Cacuriá and Mestrar: illustrating the integration between the content creation tool (Cacuriá) and the content storage and delivery platform (Mestrar), developed to support educational initiatives and RNP's requirements.
+                    </p>
                     <ul class="list-inline">
                         <li>More information:
                             <a class="link" target="_blank"
