Add overview and full report sections to Ginga project, detailing project context and outcomes

--- a/projects/ginga.html
+++ b/projects/ginga.html
@@ -26,8 +26,30 @@
                 <h2 class="section-heading text-uppercase">Ginga NCL</h2>
                 <h3 class="section-subheading text-muted">A middleware of the Japanese-Brazilian Digital TV</h3>
             </div>
+            <div class="text-left">
+                <h4 class="section-heading text-capitalize">Overview</h4>
+            </div>
             <div class="row justify-content-center">
-                <div class="col-md-12">
+                <div class="col-md-11">
+                    <p class="text-muted-justified">
+                        <b>(S)ituation:</b> While working as a researcher at TeleMidia Lab – PUC-Rio, I contributed to a project aimed at enhancing the Ginga middleware, a critical component of the Japanese-Brazilian Digital TV System and an ITU-T standard for IPTV.
+                    </p>
+                    <p class="text-muted-justified">
+                        <b>(T)ask:</b> My specific responsibility was to rebuild the video player used in the Ginga-NCL Presentation Environment, ensuring it fully supported the rich media synchronization and presentation features defined in the NCL language.
+                    </p>
+                    <p class="text-muted-justified">
+                        <b>(A)ction:</b> I developed a new video player using C++ for core development, GStreamer for audio/video decoding, and Cairo for 2D rendering. Additionally, I implemented support for NCL-specified media properties such as <i>balanceLevel, trebleLevel, bassLevel,</i> and <i>freeze</i>.
+                    </p>
+                    <p class="text-muted-justified">
+                        <b>(R)esult:</b> The new video player significantly improved the functionality and fidelity of media playback within Ginga applications. The system successfully rendered complex interactive content as intended, enhancing the user experience and reinforcing the platform’s compliance with international standards.
+                    </p>
+                </div>
+            </div>
+            <div class="text-left">
+                <h4 class="section-heading text-capitalize">Full Report</h4>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-11">
                     <p class="text-muted-justified">
                         During my time as a researcher at <a class="link" target="_blank"
                         href="http://telemidia.puc-rio.br/">TeleMidia Lab.</a> - <a class="link"
@@ -50,8 +72,10 @@
                         bassLevel, and freeze. It was great to see the final result, and the figure below shows
                         Ginga playing an application using the new video player.
                     </p>
-                    <img class="img-fluid d-block mx-auto" src="../assets/img/projects/ginga/playing.png"
-                        alt="" />
+                    <p class="text-muted-centered">
+                        <img class="img-fluid d-block mx-auto" src="../assets/img/projects/ginga/playing.png" alt="" />
+                        <b>Figure 1:</b> Ginga playing an application using the new video player.
+                    </p>
                     <p class="text-muted-justified">
                         Ginga-NCL was developed and is maintained by <a class="link" target="_blank"
                             href="http://telemidia.puc-rio.br/">TeleMidia Lab.</a> at <a class="link"
