Add overview and full report sections to distribution project, enhancing clarity on project context and outcomes

--- a/projects/distribution.html
+++ b/projects/distribution.html
@@ -28,39 +28,64 @@
                 <h2 class="section-heading text-uppercase">Distribution of Court Proceedings</h2>
                 <h3 class="section-subheading text-muted">A recommendation system to assign prosecutors in court</h3>
             </div>
+            <div class="text-left">
+                <h4 class="section-heading text-capitalize">Overview</h4>
+            </div>
             <div class="row justify-content-center">
-                <div class="col-md-12">
+                <div class="col-md-11">
+                    <p class="text-muted-justified">
+                        <b>(S)ituation:</b> In 2018, while working as a Data Scientist at ECOA PUC-Rio, I led a project to support the Public Prosecution Office of Rio de Janeiro in improving its operational efficiency.
+                    </p>
+                    <p class="text-muted-justified">
+                        <b>(T)ask:</b> The goal was to optimize the allocation of prosecutors to legal cases by leveraging historical case data to ensure each case was matched with the most appropriate prosecutor.
+                    </p>
+                    <p class="text-muted-justified">
+                        <b>(A)ction:</b> We collected and cleansed a comprehensive dataset of past lawsuits and applied statistical analysis to identify key patterns and correlations. Using this insight, I developed a decision tree model for its interpretability, deployed it as a RESTful API, and integrated it into the prosecution’s internal systems to provide real-time prosecutor recommendations.
+                    </p>
+                    <p class="text-muted-justified">
+                        <b>(R)esult:</b> The model streamlined the case assignment process, reduced delays, and enhanced decision-making efficiency within the Public Prosecution Office, showcasing the tangible benefits of data science in the legal sector.
+                    </p>
+                </div>
+            </div>
+            <div class="text-left">
+                <h4 class="section-heading text-capitalize">Full Report</h4>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-11">
                     <p class="text-muted-justified">                                    
                         As a Data Scientist at <a class="link" target="_blank" href='https://ecoa.puc-rio.br/'>ECOA PUC-Rio</a>
                         in 2018, I had the privilege of leading a significant project aimed at enhancing the operational
                         efficiency of the <a class="link" target="_blank" href='http://www.mprj.mp.br'>Public Prosecution 
-                        from Rio de Janeiro</a>.
+                        of Rio de Janeiro</a>.
                     </p>
                     <p class="text-muted-justified">
-                        The objective of this project was to optimize the allocation of prosecutors to individual legal cases,
-                        ensuring that each case was assigned to the most suitable prosecutor. To achieve this, we embarked on a
-                        comprehensive data-driven initiative.
+                        The objective was to optimize the allocation of prosecutors to legal cases,
+                        by ensuring that each case was matched with the most suitable professional.
+                        To accomplish this, we embarked on a comprehensive, data-driven initiative grounded in historical legal data.
                     </p>
                     <p class="text-muted-justified">
                         This project began by acquiring extensive historical lawsuit data, with a diverse array of metadata such 
                         as case type, cause, and origin. This dataset tracked the legal journey of lawsuits from the <a class="link"
                         target="_blank" href='http://www.tjrj.jus.br'> Court of Law from Rio de Janeiro</a> to the Public Prosecution.
-                        To prepare this data for analysis, we meticulously executed a data cleansing process, which proved to be a 
-                        labor-intensive yet indispensable phase of the project.
+                        One of the most time-consuming critical stages of the project was the data cleansing process, which ensured
+                        the accuracy and consistency necessary for meaningful analysis.
                     </p>
                     <p class="text-muted-justified">
-                        Through statistical methods, we unearthed critical correlations within the dataset. These correlations were 
-                        instrumental in the development of a robust decision tree model to automate the task of matching the most
-                        appropriate prosecutor to each lawsuit. This machine learning model was deliberately chosen for its
-                        interpretability, allowing us to elucidate its learning process and gain insights into its decision-making
-                        mechanisms.
+                        Through statistical methods, we uncovered important correlations within the dataset. These correlations were 
+                        laid the foundation for building a decision tree model designed to automate the prosecutor allocation process.
+                        We selected this model specifically for its interpretability, which allowed us to clearly explain how
+                        recommendations were made and to foster trust among stakeholders.
                     </p>
                     <p class="text-muted-justified">
-                        We operationalized our model by deploying it as a RESTful API service. By doing so, we enabled seamless 
-                        integration into the existing workflow of the Public Prosecution, allowing them to input relevant case 
-                        features and receive instant recommendations for the most suitable prosecutor. This project not only 
-                        streamlined the allocation process but also improved the efficiency of the Public Prosecution from 
-                        Rio de Janeiro.
+                        We operationalized our model by deploying it as a RESTful API service, enabling seamless
+                        integration with the Public Prosecution’s internal systems. This allowed users to input key features of
+                        new cases and instantly receive recommendations for the most appropriate prosecutor. The outcome was a
+                        significantly more efficient allocation process that improved workflow, reduced assignment delays, and
+                        supported more consistent decision-making across the organization.
+                    </p>
+                    <p class="text-muted-justified">
+                        This project not only delivered practical results but also demonstrated how data science can be used to solve
+                        complex challenges in the legal domain, paving the way for smarter, fairer, and more efficient public services.
                     </p>
                 </div>
             </div>
