--- a/projects/similarity.html
+++ b/projects/similarity.html
@@ -28,30 +28,61 @@
                 <h2 class="section-heading text-uppercase">Text Similarity</h2>
                 <h3 class="section-subheading text-muted">A data science approach applied on legal text</h3>
             </div>
+            <div class="text-left">
+                <h4 class="section-heading text-capitalize">Overview</h4>
+            </div>
             <div class="row justify-content-center">
-                <div class="col-md-12">
+                <div class="col-md-11">
+                    <p class="text-muted-justified">
+                        <b>(S)ituation:</b> While working as a Data Scientist at ECOA PUC-Rio in 2019, I contributed to a project aimed at helping prosecutors from the Public Prosecution of Rio de Janeiro find legal texts with similar contextual content.
+                    </p>
+                    <p class="text-muted-justified">
+                        <b>(T)ask:</b> The goal was to develop a system that could analyze a large volume of legal documents and suggest contextually similar texts to support legal research and case preparation.
+                    </p>
+                    <p class="text-muted-justified">
+                        <b>(A)ction:</b> I processed legal documents (mostly in PDF format) by extracting text, analyzing patterns, and testing methods for document representation. We ultimately used a pre-trained Portuguese word embedding model from USP to vectorize the texts. Using cosine similarity, we ranked documents by contextual closeness and made the results accessible through a RESTful API service.
+                    </p>
+                    <p class="text-muted-justified">
+                        <b>(R)esult:</b> The resulting tool improved the speed and accuracy with which prosecutors could locate relevant documents, increasing the overall efficiency of legal research within the Public Prosecution of Rio de Janeiro.
+                    </p>
+                </div>
+            </div>
+            <div class="text-left">
+                <h4 class="section-heading text-capitalize">Full Report</h4>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-11">
                 <p class="text-muted-justified">                                    
-                    During my time as a data scientist at <a class="link" target="_blank" 
-                    href='https://ecoa.puc-rio.br/'>ECOA PUC-Rio</a> in 2019, I initiated a project with the 
-                    objective of assisting prosecutors in locating legal texts with similar contextual content. 
+                    During my time as a Data Scientist at <a class="link" target="_blank" 
+                    href='https://ecoa.puc-rio.br/'>ECOA PUC-Rio</a> in 2019, I led a project aimed 
+                    at assisting prosecutors in identifying legal texts with similar contextual content. 
                     This project involved in-depth analysis and exploration of data obtained from both the  
                     <a class="link" target="_blank" href='http://www.mprj.mp.br'>Public Prosecution</a> and 
-                    <a class="link" target="_blank" href='http://www.tjrj.jus.br'>Court of Law</a> from Rio de Janeiro.
+                    <a class="link" target="_blank" href='http://www.tjrj.jus.br'>Court of Law</a> of Rio de Janeiro.
                 </p>
                 <p class="text-muted-justified">
                     The documents, mainly in PDF format, underwent a text extraction process, followed by a meticulous 
                     pattern identification and analysis. To construct a vector representation of these documents, 
                     we explored various methodologies and ultimately opted for a <a class="link" target="_blank" 
                     href='http://nilc.icmc.usp.br/embeddings'>pre-trained model using word embeddings</a> specifically 
-                    designed for Portuguese text, developed by USP (Universidade de São Paulo). 
+                    designed for Portuguese text, developed by USP (Universidade de São Paulo).
+
+                    The project began with the extraction of text from thousands of legal documents, primarily in PDF format.
+                    Following this, we performed detailed pattern recognition and data analysis to uncover meaningful relationships
+                    within the text corpus. To construct a vector representation of these documents, we explored several techniques
+                    and ultimately selected a <a class="link" target="_blank" href='http://nilc.icmc.usp.br/embeddings'>pre-trained
+                    word embedding model specifically developed for Portuguese by the University of São Paulo (USP)</a>.
                 </p>
                 <p class="text-muted-justified">
-                    We used cosine distance calculations to determine the similarity of texts and sorted the results accordingly.
-                    To make this feature more accessible, we transformed it into a RESTful API service, which streamlined the process
-                    for our users. The result is a collection of legal texts sorted in ascending order of cosine distance, making it
-                    easier to identify and access documents with similar contextual content. This improvement has increased the
-                    efficiency of the Public Prosecution of Rio de Janeiro.
+                    We employed cosine similarity to measure the contextual closeness between documents and ranked the results accordingly.
+                    To make this feature more accessible, we deployed the solution as a RESTful API service.
+                    This allowed end users to retrieve a ranked list of legal documents based on similarity, significantly simplifying
+                    the process of locating relevant legal texts.
                 </p>
+                <p class="text-muted-justified">
+                    The project was successfully implemented and improved the ability of prosecutors to quickly find and compare documents,
+                    enhancing both the accuracy and speed of legal analysis within the Public Prosecution Office of Rio de Janeiro.
+                </p>    
             </div>
         </div>
     </section>
