Refine personal description in About Me section, enhancing clarity on experience and academic background

--- a/body/sections/about-me.html
+++ b/body/sections/about-me.html
@@ -14,24 +14,25 @@
                 <!-- <span class="fa-stack fa-4x"><i class="fas fa-circle fa-stack-2x text-primary"></i><i class="fab fa-js-square fa-stack-1x fa-inverse"></i></span> -->
                 <!-- <h4 class="my-3">JavaScript</h4> -->
                 <p class="text-muted-justified">
-                    Hello, my name is <b>André Luiz</b>, I am Computer Scientist and I have experience as Software
-                    Engineer, and Data Scientist in multiple industries: Edtech, Public Prosecution and Court of
-                    Law, Oil & Gas Distribution, and Agribusiness.
+                    Hello, my name is <b>André Luiz</b>, I am a Computer Scientist with experience as a
+                        Software Engineer, Data Engineer, and Data Scientist in multiple industries: Edtech,
+                        Public Prosecution and Court of Law, Oil and gas Distribution, and Agribusiness.
                 </p>
                 <p class="text-muted-justified">
-                    I have a solid academic background, with a Ph.D. in Informatics (2020) from the <a class="link"
+                    I describe myself as a software engineer working with data. I have a solid academic background
+                        in Computer Science, with a Ph.D. in Informatics (2020) from the <a class="link"
                         target="_blank" href="https://www.puc-rio.br">Pontifícia Universidade Católica do Rio de
-                        Janeiro (PUC-Rio)</a> in the Data Science field.
-                    My M.Sc. (2015) and a Bachelor’s degrees (2012) in Computer Science are from the <a class="link"
-                        target="_blank" href="https://portais.ufma.br/PortalUfma/">Universidade Federal do Maranhão
-                        (UFMA)</a> in Brazil in the Multimedia field.
+                        Janeiro (PUC-Rio)</a> in the Data Science field, and a M.Sc. (2015) and a Bachelor’s degrees
+                        (2012) in Computer Science are from the <a class="link" target="_blank"
+                        href="https://portais.ufma.br/PortalUfma/">Universidade Federal do Maranhão (UFMA)</a>
+                        in Brazil in the Multimedia field.
                 </p>
                 <p class="text-muted-justified">
-                    My strong interests are in software engineering, data science, machine learning, and data engineering.
+                    My strong interests are software engineering, data engineering, data science, and machine learning.
                 </p>
                 <p class="text-muted-justified">
-                    Currently, I work as Senior Data Scientist, and Manager at <a class="link" target="_blank"
-                        href="https://www.seedz.ag/">Seedz</a>, a Vertical SaaS to connect and optimize the agribusiness ecosystem.
+                    Currently, I work as a Data Engineer at <a class="link" target="_blank" href="https://www.seedz.ag/">Seedz</a>,
+                        a Vertical SaaS to connect and optimize the agribusiness ecosystem.
                 </p>
             </div>
         </div>
